--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,13 +1,24 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "esnext",
     "target": "esnext",
     "esModuleInterop": true,
     "strict": true,
     "jsx": "react",
     "outDir": "dist",
-    "allowJs": true
+    "allowJs": true,
+    "lib": [
+      "DOM",
+      "ES2020",
+      "ES6"
+    ]
   },
-  "include": ["components"],
-  "exclude": ["node_modules", "**/*.test.tsx", "**/*.stories.tsx"]
+  "include": [
+    "components"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.test.tsx",
+    "**/*.stories.tsx"
+  ]
 }
