restructure: stop use monorepo

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -8,11 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2-beta
-        with:
-          node-version: '12'
       - name: Install Packages
         run: npm install
       - name: Unit Test
-        run: npm run test:lib
+        run: npm run test
 
