--- a/package.json
+++ b/package.json
@@ -1,40 +1,65 @@
 {
-  "name": "tui-react-monorepo",
+  "name": "@infinitex/tui-react",
   "version": "0.0.1",
   "description": "A React UI component library",
   "author": "Yiyang Xu",
   "license": "MIT",
-  "private": true,
+  "main": "./dist/index.js",
+  "module": "./dist/indes.esm.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "postinstall": "lerna bootstrap --no-ci --loglevel warn --concurrency 4",
-    "dev:app": "cd packages/example && npm run start",
-    "dev:lib": "cd packages/core && npm run start",
-    "test:lib": "cd packages/core && npm run ci:test",
-    "eslint": "eslint ./packages/core/**/*.tsx",
+    "test": "mocha",
+    "build": "rollup -c",
+    "eslint": "eslint **/*.tsx",
     "storybook": "start-storybook -p 9999"
   },
-  "workspaces": [
-    "packages/*"
-  ],
+  "dependencies": {
+    "classnames": "^2.2.6"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0",
+    "react-transition-group": "^4.4.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.11.0",
+    "@rollup/plugin-babel": "^5.1.0",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-info": "^5.3.19",
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^5.3.19",
+    "@types/chai": "^4.2.12",
+    "@types/classnames": "^2.2.10",
+    "@types/enzyme": "^3.10.5",
+    "@types/mocha": "^8.0.1",
+    "@types/react-transition-group": "^4.4.0",
     "babel-loader": "^8.1.0",
+    "chai": "^4.2.0",
     "css-loader": "^4.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "esbuild": "^0.6.14",
     "eslint": "^7.6.0",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.20.5",
-    "lerna": "^3.22.1",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^16.3.0",
+    "jsdom-global": "^3.0.2",
+    "mocha": "^8.1.1",
     "prettier": "2.0.5",
     "react-docgen-typescript-loader": "^3.7.2",
+    "rollup": "^2.23.0",
+    "rollup-plugin-dts": "^1.4.9",
+    "rollup-plugin-ignore-import": "^1.3.2",
+    "rollup-plugin-postcss": "^3.1.3",
+    "rollup-plugin-typescript2": "^0.27.1",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
+    "sucrase": "^3.15.0",
     "typescript": "^3.9.7"
   }
 }
