--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "classnames": "^2.2.6"
   },
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-transition-group": "^4.4.1"
+    "react": "^16.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.0",
@@ -36,6 +35,7 @@
     "@types/enzyme": "^3.10.5",
     "@types/mocha": "^8.0.1",
     "@types/react-transition-group": "^4.4.0",
+    "@types/requestidlecallback": "^0.3.1",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
     "css-loader": "^4.2.0",
