--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "classnames": "^2.2.6"
   },
   "peerDependencies": {
-    "react": "^16.8.0"
+    "react": "^16.8.0",
+    "react-icons": "^3.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.0",
@@ -40,7 +41,6 @@
     "css-loader": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "esbuild": "^0.6.14",
     "eslint": "^7.6.0",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.20.5",
