--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@infinitex/tui-react",
+  "name": "foody-ui",
   "version": "0.0.1",
-  "description": "A React UI component library",
+  "description": "A React UI component library to make food",
   "author": "Yiyang Xu",
   "license": "MIT",
   "main": "./dist/index.js",
@@ -11,7 +11,8 @@
     "test": "mocha",
     "build": "rollup -c",
     "eslint": "eslint **/*.tsx",
-    "storybook": "start-storybook -p 9999"
+    "storybook": "start-storybook -p 9999",
+    "update:dependency": "taze -w"
   },
   "dependencies": {
     "classnames": "^2.2.6"
@@ -21,7 +22,7 @@
     "react-icons": "^3.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.0",
+    "@babel/core": "^7.11.1",
     "@rollup/plugin-babel": "^5.1.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
@@ -38,27 +39,35 @@
     "@types/react-transition-group": "^4.4.0",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
-    "css-loader": "^4.2.0",
+    "css-loader": "^4.2.1",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-adapter-react-16": "^1.15.3",
     "eslint": "^7.6.0",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.20.5",
+    "husky": "^4.2.5",
     "ignore-styles": "^5.0.1",
-    "jsdom": "^16.3.0",
+    "jsdom": "^16.4.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^8.1.1",
     "prettier": "2.0.5",
     "react-docgen-typescript-loader": "^3.7.2",
-    "rollup": "^2.23.0",
-    "rollup-plugin-dts": "^1.4.9",
+    "react-icons": "^3.10.0",
+    "rollup": "^2.23.1",
+    "rollup-plugin-dts": "^1.4.10",
     "rollup-plugin-ignore-import": "^1.3.2",
-    "rollup-plugin-postcss": "^3.1.3",
-    "rollup-plugin-typescript2": "^0.27.1",
+    "rollup-plugin-postcss": "^3.1.5",
+    "rollup-plugin-typescript2": "^0.27.2",
     "sass": "^1.26.10",
-    "sass-loader": "^9.0.2",
+    "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
     "sucrase": "^3.15.0",
+    "taze": "^0.3.0-beta.1",
     "typescript": "^3.9.7"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn test && yarn eslint"
+    }
   }
 }
