--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "lib": ["DOM", "ES2020", "ES6"]
   },
   "include": ["src"],
-  "exclude": ["**/*.test.tsx", "**/*.stories.tsx"]
+  "exclude": ["node_modules"]
 }
