--- a/package.json
+++ b/package.json
@@ -22,50 +22,50 @@
     "react-icons": "^3.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@commitlint/cli": "^9.1.1",
-    "@commitlint/config-conventional": "^9.1.1",
-    "@rollup/plugin-babel": "^5.1.0",
+    "@babel/core": "^7.11.6",
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
+    "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-info": "^5.3.19",
-    "@storybook/addon-knobs": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
+    "@storybook/addon-actions": "^5.3.21",
+    "@storybook/addon-info": "^5.3.21",
+    "@storybook/addon-knobs": "^5.3.21",
+    "@storybook/addons": "^5.3.21",
     "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^5.3.19",
+    "@storybook/react": "^5.3.21",
     "@types/chai": "^4.2.12",
     "@types/classnames": "^2.2.10",
-    "@types/enzyme": "^3.10.5",
-    "@types/mocha": "^8.0.1",
+    "@types/enzyme": "^3.10.6",
+    "@types/mocha": "^8.0.3",
     "@types/react-transition-group": "^4.4.0",
     "babel-loader": "^8.1.0",
     "chai": "^4.2.0",
-    "css-loader": "^4.2.1",
+    "css-loader": "^4.3.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.3",
-    "eslint": "^7.6.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "eslint": "^7.8.1",
     "eslint-config-airbnb-typescript-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.20.5",
-    "husky": "^4.2.5",
+    "eslint-plugin-react": "^7.20.6",
+    "husky": "^4.3.0",
     "ignore-styles": "^5.0.1",
     "jsdom": "^16.4.0",
     "jsdom-global": "^3.0.2",
-    "mocha": "^8.1.1",
+    "mocha": "^8.1.3",
     "prettier": "2.0.5",
     "react-docgen-typescript-loader": "^3.7.2",
-    "react-icons": "^3.10.0",
-    "rollup": "^2.23.1",
-    "rollup-plugin-dts": "^1.4.10",
+    "react-icons": "^3.11.0",
+    "rollup": "^2.26.11",
+    "rollup-plugin-dts": "^1.4.13",
     "rollup-plugin-ignore-import": "^1.3.2",
-    "rollup-plugin-postcss": "^3.1.5",
+    "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-typescript2": "^0.27.2",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
     "sucrase": "^3.15.0",
-    "taze": "^0.3.0-beta.1",
-    "typescript": "^3.9.7"
+    "taze": "^0.3.1",
+    "typescript": "^4.0.2"
   },
   "husky": {
     "hooks": {
