--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ignore-styles": "^5.0.1",
     "jsdom": "^16.4.0",
     "jsdom-global": "^3.0.2",
+    "lint-staged": "^10.3.0",
     "mocha": "^8.1.3",
     "prettier": "2.0.5",
     "react-docgen-typescript-loader": "^3.7.2",
@@ -69,8 +70,14 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn test && yarn eslint",
+      "pre-commit": "yarn test && lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
